cluster/apps/networking/traefik/routers/auth-ldap-authentik-ingroutetcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldap-authentik-tcp
  namespace: auth
spec:
  entryPoints:
    - ldaps
  routes:
    - match: HostSNI(`ldap.${XYZ_DOMAIN}`)
      services:
        - name: ak-outpost-ldap-outpost
          port: 389
  tls:
    secretName: tls.ldap-bloopnet
