cluster/apps/networking/traefik/routers/auth-ldap-authentik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-authentik-ingress
  namespace: auth
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: tcp
    traefik.ingress.kubernetes.io/router.entrypoints: ldaps
    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-no-auth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: &host ldap.${XYZ_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-ldap-outpost.auth
                port:
                  number: 389
    - host: &shost ldaps.${XYZ_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-ldap-outpost.auth
                port:
                  number: 636
  tls:
    - secretName: tls.ldap-bloopnet
      hosts:
        - *host
        - *shost
