cluster/apps/networking/traefik/routers/classic-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: classic-traefik
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`bloopnet.${CLASSIC_DOMAIN}`)
      services:
        - name: classic-traefik
          port: 443
  tls:
    passthrough: true
