cluster/apps/networking/traefik/routers/home-emqx.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: emqx
  namespace: networking
spec:
  entryPoints:
    - websecure
    - wss
    - mqtts
  routes:
    - match: HostSNI(`emqx.${XYZ_DOMAIN}`)
      services:
        - name: emqx.home
          port: 18083
    - match: HostSNI(`mqtt.${XYZ_DOMAIN}`)
      services:
        - name: emqx.home
          port: 1883
    - match: HostSNI(`emqx-ws.${XYZ_DOMAIN}`)
      services:
        - name: emqx.home
          port: 8083
  tls:
    secretName: tls.${XYZ_DOMAIN/./-}
