cluster/apps/networking/traefik/routers/home-hass-db.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: hass-db-route
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`hadb.${XYZ_DOMAIN}`)
      services:
        - name: ha-postgres
          port: 5432
