cluster/apps/networking/traefik/routers/home-zwavejs-ws.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zwave-ws
  namespace: home
spec:
  entryPoints:
    - wss
  routes:
    - match: HostSNI(`zwave.${XYZ_DOMAIN}`)
      services:
        - name: zwavejs2mqtt
          port: 3000
      middlewares:
        - name: networking-rfc1918@kubernetescrd
