cluster/apps/networking/traefik/routers/home-zwavejs-wss.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zwave-wss
  namespace: home
spec:
  entryPoints:
    - websocket-tls
  routes:
    - match: HostSNI(`zwave-wss.${XYZ_DOMAIN}`)
      services:
        - name: zwavejs2mqtt-websock
          port: 3000
      middlewares:
        - name: networking-rfc1918-tcp@kubernetescrd
