cluster/apps/networking/traefik/routers/ldap-authentik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldap-authentik-route
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`ldap.${XYZ_DOMAIN}`)
      services:
        - name: ak-outpost-external-ldap.auth.svc.cluster.local
          port: 636
