cluster/apps/networking/traefik/routers/media-lidarr-fix.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-fix
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.${XYZ_DOMAIN}`)
      priority: 98
      services:
        - kind: Service
          name: lidarr
          port: 8686
      middlewares:
        - name: networking-rfc1918@kubernetescrd
  tls:
    secretName: "tls.lidarr"
