cluster/apps/networking/traefik/routers/media-sonarr-uhd-bypass.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-uhd-bypass
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr-uhd.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${SONARR_UHD_API_KEY}`) || Query(`apikey`, `${SONARR_UHD_API_KEY}`))
      priority: 100
      services:
        - kind: Service
          name: sonarr-uhd
          port: 8989
      middlewares:
        - name: networking-rfc1918@kubernetescrd
  tls:
    secretName: "${XYZ_DOMAIN/./-}-tls"
